fixed simple genome searcher